@@ -11648,6 +11648,12 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
         </listitem>
 
         <listitem>
+          <para>External package relative path references on windows are now
+          written using "/" character as file separator so XPDL with external
+          packages can be used cross-platform</para>
+        </listitem>
+
+        <listitem>
           <para>Shark mode:</para>
 
           <para>- Support for new extended attribute
