@@ -1,5 +1,9 @@
 ###### TWE 5.4-1 RELEASED ######
 2016-07-25 Sasa Bojanic <sasaboy@together.at>
+   # External package relative path references on windows are now written using "/" character as file separator so 
+     XPDL with external packages can be used cross-platform
+   
+2016-07-25 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: SharkDisplayGenerator differently present WorkflowProcess name in GUI (category variable value information is appended)
 
 2016-07-20 Sasa Bojanic <sasaboy@together.at>
